--- a/db/chat-trigger-config.json
+++ b/db/chat-trigger-config.json
@@ -3,35 +3,42 @@
     {
       "enabled": true,
       "templateKey": "dataplayer",
+      "section": "1"
+    },
+    {
+      "enabled": true,
+      "templateKey": "dataedificio",
       "section": "2"
     },
     {
-      "enabled": false,
-      "section": "2"
-    },
-    {
-      "enabled": false,
+      "enabled": true,
+      "templateKey": "dataplayer",
       "section": "3"
     },
     {
-      "enabled": false,
+      "enabled": true,
+      "templateKey": "dataedificio",
       "section": "4"
     },
     {
-      "enabled": false,
+      "enabled": true,
+      "templateKey": "dataplayer",
       "section": "5"
     },
     {
-      "enabled": false,
+      "enabled": true,
+      "templateKey": "dataedificio",
       "section": "6"
     },
     {
-      "enabled": false,
+      "enabled": true,
+      "templateKey": "dataplayer",
       "section": "7"
     },
     {
-      "enabled": false,
-      "section": "8"
+      "enabled": true,
+      "section": "8",
+      "templateKey": "dataedificio"
     }
   ]
 }
