--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && prisma db push --skip-generate && next dev -p 3000 2>&1 | tee dev.log",
+    "dev": "bun run db:init-check && next dev -p 3000 2>&1 | tee dev.log",
     "build": "prisma generate && next build && cp -r .next/static .next/standalone/.next/ && cp -r public .next/standalone/",
     "start": "NODE_ENV=production bun .next/standalone/server.js 2>&1 | tee server.log",
     "lint": "eslint .",
@@ -11,7 +11,11 @@
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:reset": "prisma migrate reset",
-    "db:init": "prisma generate && prisma db push"
+    "db:init": "bun run db/create-db.ts",
+    "db:init-check": "bun run db/init-db.ts",
+    "db:list-backups": "bun run db/list-backups.ts",
+    "db:backup": "bun run db/create-backup.ts",
+    "db:restore": "bun run scripts/db-restore.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
