--- a/package.json
+++ b/package.json
@@ -3,25 +3,26 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "dev": "bun run db:init-check && next dev -p 3000 2>&1 | tee dev.log",
+    "setup": "node setup.js",
+    "dev": "node setup.js && npx --yes prisma@6.19.2 generate && next dev -p 3000",
+    "dev:quick": "npx --yes prisma@6.19.2 generate && next dev -p 3000",
     "build": "prisma generate && next build && cp -r .next/static .next/standalone/.next/ && cp -r public .next/standalone/",
-    "start": "NODE_ENV=production bun .next/standalone/server.js 2>&1 | tee server.log",
+    "start": "NODE_ENV=production node .next/standalone/server.js",
     "lint": "eslint .",
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:reset": "prisma migrate reset",
-    "db:init": "bun run db/create-db.ts",
-    "db:init-check": "bun run db/init-db.ts",
-    "db:list-backups": "bun run db/list-backups.ts",
-    "db:backup": "bun run db/create-backup.ts",
-    "db:restore": "bun run scripts/db-restore.ts"
+    "db:init:npm": "npx --yes prisma@6.19.2 generate && npx --yes prisma@6.19.2 db push",
+    "db:init-check:npm": "npx --yes prisma@6.19.2 generate"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.1.1",
+    "@lancedb/lancedb": "^0.10.0",
+    "@lancedb/lancedb-win32-x64-msvc": "0.10.0",
     "@mdxeditor/editor": "^3.39.1",
     "@prisma/client": "6.19.2",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -62,6 +63,7 @@
     "framer-motion": "^12.23.2",
     "input-otp": "^1.4.2",
     "konva": "^10.2.0",
+    "lancedb": "^0.0.1",
     "lucide-react": "^0.525.0",
     "next": "^16.1.1",
     "next-auth": "^4.24.11",
