--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "setup": "node setup.js",
     "dev": "node setup.js && npx --yes prisma@6.19.2 generate && next dev -p 3000",
     "dev:quick": "npx --yes prisma@6.19.2 generate && next dev -p 3000",
+    "dev:windows": "node setup.js && npx --yes prisma@6.19.2 generate && next dev -p 3000 > dev.log 2>&1",
     "build": "prisma generate && next build && cp -r .next/static .next/standalone/.next/ && cp -r public .next/standalone/",
     "start": "NODE_ENV=production node .next/standalone/server.js",
+    "start:windows": "set NODE_ENV=production && node .next/standalone/server.js > server.log 2>&1",
     "lint": "eslint .",
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
@@ -21,7 +23,8 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.1.1",
-    "@lancedb/lancedb": "^0.10.0",
+    "@lancedb/lancedb": "0.10.0",
+    "@lancedb/lancedb-linux-x64-gnu": "0.10.0",
     "@lancedb/lancedb-win32-x64-msvc": "0.10.0",
     "@mdxeditor/editor": "^3.39.1",
     "@prisma/client": "6.19.2",
@@ -70,7 +73,7 @@
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "pg": "^8.17.1",
-    "prisma": "6.19.2",
+    "prisma": "^6.11.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
