--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs_tailwind_shadcn_ts",
+  "name": "esparcraft-bridge",
   "version": "0.2.0",
   "private": true,
   "scripts": {
@@ -25,7 +25,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@lancedb/lancedb": "^0.26.2",
     "@mdxeditor/editor": "^3.39.1",
-    "@prisma/client": "6.19.2",
+    "@prisma/client": "^6.19.2",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -69,7 +69,6 @@
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
-    "pg": "^8.17.1",
     "prisma": "6.19.2",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.0",
@@ -83,8 +82,8 @@
     "sharp": "^0.34.3",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
     "tailwindcss": "^4",
+    "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.5",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
@@ -94,7 +93,6 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "bun-types": "^1.3.4",
